Style corrections margins fonts positions and horizontal scroll

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,12 +1,20 @@
+
+*{
+   margin: 0 auto;
+   padding: 0;
+   box-sizing: border-box;
+   
+}
+
 a{
    text-decoration: none;
    color: #8C5C32;
 }
 
 body{
-   
    font-family: 'Major Mono Display', monospace;
    background: #89888C;
+   margin: auto;
 }
 
 .hero{
